--- a/docker/.env
+++ b/docker/.env
@@ -1,9 +1,9 @@
 # DB Information
-DB_ROOT_PASSWD=
-DB_SCHEMA_NAME=
-DB_URL=jdbc:mysql://app-db:3306/
-DB_USER_NAME=
-DB_USER_PASSWD=
+DB_ROOT_PASSWD=wendy0388
+DB_SCHEMA_NAME=xiushui_website
+DB_URL=jdbc:mysql://app-db:3306/xiushui_website
+DB_USER_NAME=xiushui_website
+DB_USER_PASSWD=administrator
 
 # Export Port Information
 EXPORT_PORT_DB=3310
