--- a/Docker/service/Dockerfile
+++ b/Docker/service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-alpine
 
-COPY xiushui_website-0.0.1-SNAPSHOT.war app.war
+COPY ./service/xiushui_website-0.0.1-SNAPSHOT.war app.war
 
 ENTRYPOINT ["java","-jar","/app.war"]
