--- a/Rest Service/src/main/resources/application.properties
+++ b/Rest Service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#server.port=8080
+#server.port=8888
 #
 #spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/xiushui_website
+#spring.datasource.url=jdbc:mysql://localhost:3310/xiushui_website
 #spring.datasource.username=xiushui_website
 #spring.datasource.password=administrator
+
+server.servlet.contextPath=/RestService
