Add new service and fix problems
1. add rest service to get all donation informations

2. split application.properties for dev

--- a/Rest Service/pom.xml
+++ b/Rest Service/pom.xml
@@ -14,6 +14,20 @@
 	<packaging>war</packaging>
 	<name>Xiushui Website</name>
 	<description></description>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<activeProfile>dev</activeProfile>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<activeProfile></activeProfile>
+			</properties>
+		</profile>
+	</profiles>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
