--- a/Rest Service/src/main/resources/application.properties
+++ b/Rest Service/src/main/resources/application.properties
@@ -1,8 +1,2 @@
-#server.port=8888
-#
-#spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3310/xiushui_website
-#spring.datasource.username=xiushui_website
-#spring.datasource.password=administrator
-
+spring.profiles.active="@activeProfile@"
 server.servlet.contextPath=/RestService
