--- a/Rest Service/src/main/resources/application-dev.properties
+++ b/Rest Service/src/main/resources/application-dev.properties
@@ -1,6 +1,9 @@
-server.port=
+server.port=8888
 
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3310/
 spring.datasource.username=
 spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
