--- a/GUI_Vue3/.env
+++ b/GUI_Vue3/.env
@@ -1,8 +1,13 @@
-# VITE_REST_BASE_URL='http://localhost:8888'
+# Rest Service for User Donate
 VITE_REST_URL_USERDONATE_GET_ALLINFO='UserDonateService/GetAllInformation'
 VITE_REST_URL_USERDONATE_GET_OVERDRAFT='UserDonateService/GetOverDraft'
 VITE_REST_URL_USERDONATE_GET_ONCOMING='UserDonateService/GetOnComing'
 VITE_REST_URL_USERDONATE_GET_BY_USERID='UserDonateService/GetByUserId'
 
-
+# Rest Service for User
 VITE_REST_URL_USER_GET_ALLINFO='UserService/GetAllUsers'
+
+# Rest Service for Donate Category
+VITE_REST_URL_DONATE_CATEGORY_GET_ALLINFO='DonateCategoryService/GetAllCategory'
+VITE_REST_URL_DONATE_CATEGORY_ADD_NEW='DonateCategoryService/AddNewCategory'
+VITE_REST_URL_DONATE_CATEGORY_DELETE='DonateCategoryService/DeleteById'
