--- a/GUI_Vue3/.env
+++ b/GUI_Vue3/.env
@@ -8,6 +8,9 @@ VITE_REST_URL_USERDONATE_GET_BY_USERID='UserDonateService/GetByUserId'
 VITE_REST_URL_USER_GET_ALLINFO='UserService/GetAllUsers'
 
 # Rest Service for Donate Category
-VITE_REST_URL_DONATE_CATEGORY_GET_ALLINFO='DonateCategoryService/GetAllCategory'
-VITE_REST_URL_DONATE_CATEGORY_ADD_NEW='DonateCategoryService/AddNewCategory'
-VITE_REST_URL_DONATE_CATEGORY_DELETE='DonateCategoryService/DeleteById'
+VITE_REST_URL_DONATECATEGORY_GET_ALLINFO='DonateCategoryService/GetAllCategories'
+VITE_REST_URL_DONATECATEGORY_ADD_NEW='DonateCategoryService/AddNewCategory'
+VITE_REST_URL_DONATECATEGORY_DELETE='DonateCategoryService/DeleteById'
+
+# Rest Service for Paid Record
+VITE_REST_URL_PAIDRECORD_GET_ALLINFO='PaidRecordService/GetAllRecords'
