--- a/GUI_Vue3/.env
+++ b/GUI_Vue3/.env
@@ -6,6 +6,11 @@ VITE_REST_URL_USERDONATE_GET_BY_USERID='UserDonateService/GetByUserId'
 
 # Rest Service for User
 VITE_REST_URL_USER_GET_ALLINFO='UserService/GetAllUsers'
+VITE_REST_URL_USER_GET_ALLTYPES='UserService/GetAllTypes'
+VITE_REST_URL_USER_GET_BY_ID='UserService/GetUserById'
+VITE_REST_URL_USER_ADD_NEW='UserService/AddNewUser'
+VITE_REST_URL_USER_EDIT='UserService/EditUser'
+VITE_REST_URL_USER_DELETE='UserService/DeleteById'
 
 # Rest Service for Donate Category
 VITE_REST_URL_DONATECATEGORY_GET_ALLINFO='DonateCategoryService/GetAllCategories'
@@ -13,4 +18,6 @@ VITE_REST_URL_DONATECATEGORY_ADD_NEW='DonateCategoryService/AddNewCategory'
 VITE_REST_URL_DONATECATEGORY_DELETE='DonateCategoryService/DeleteById'
 
 # Rest Service for Paid Record
-VITE_REST_URL_PAIDRECORD_GET_ALLINFO='PaidRecordService/GetAllRecords'
+VITE_REST_URL_PAIDRECORD_GET_ALLINFO='PaidRecordService/GetRecordsByDonationId'
+VITE_REST_URL_PAIDRECORD_ADD_NEW='PaidRecordService/AddNewRecord'
+VITE_REST_URL_PAIDRECORD_DELETE='PaidRecordService/DeleteById'
