--- a/GUI_Vue3/package.json
+++ b/GUI_Vue3/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue3-project",
-  "version": "0.0.0",
+  "name": "xiushui-website",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.19"
